syntax = "proto3";

import "nanopb.proto";
import "proto/BasicTypes.proto";
import "proto/CryptoCreateTransactionBody.proto";
import "proto/CryptoTransferTransactionBody.proto";

message HederaTransactionBody {
    HederaTransactionID transactionID = 1;
    uint64 transactionFee = 3;
    string memo = 6 [(nanopb).max_size = 100];
    oneof data {
        HederaCryptoCreateTransactionBody cryptoCreateAccount = 11;
        HederaCryptoTransferTransactionBody cryptoTransfer = 14;
    }
}
